chore(deploy): adjust scripts from package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "nodemon --exec sucrase-node src/server.js",
-    "start": "node src/server.js",
+    "start": "node server.js",
     "postinstall": "prisma generate"
   },
   "repository": {
