fix(server): move server.js to src/

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "to_do_list_backend",
   "version": "1.0.0",
   "main": "src/server.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon --exec sucrase-node src/server.js",
-    "start": "node server.js",
+    "start": "node src/server.js",
     "postinstall": "prisma generate"
   },
   "repository": {
